updating versions etc

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *desktop*
 repl-history
 /lein/self-installs/
-/cider-repl-history
-/lein/cider-repl-history
+cider-repl-history
+**/#*#
+.nrepl-history
